--- a/app/src/main/res/layout/options_page.xml
+++ b/app/src/main/res/layout/options_page.xml
@@ -15,10 +15,12 @@
         android:layout_marginTop="5dp"
         android:layout_height="wrap_content" />
 
-    <view
+    <View
         android:layout_width="match_parent"
-        android:background="@color/blue2"
-        android:layout_height="1dp"/>
+        android:background="@color/blue25"
+        android:layout_height="1dp" >
+
+    </View>
 
 <LinearLayout
     android:layout_width="match_parent"
