--- a/app/src/main/res/layout/parking_details_page.xml
+++ b/app/src/main/res/layout/parking_details_page.xml
@@ -16,11 +16,13 @@
         android:layout_marginTop="5dp"
         android:layout_height="wrap_content" />
 
-    <view
+    <View
         android:layout_width="match_parent"
         android:background="@color/blue25"
         android:layout_below="@+id/dehaze"
-        android:layout_height="1dp"/>
+        android:layout_height="1dp" >
+
+    </View>
 
 
     <LinearLayout
